# rust_3ds

./: .gitignore  3ds.json  3dsx.ld  Cargo.toml  build.rs  compile.sh  package.sh
src/: lib.rs  main.rs  start.s
